Complete Auth flow FE + BE

--- a/Auth/views/createuser.ejs
+++ b/Auth/views/createuser.ejs
@@ -84,6 +84,18 @@
       </button>
 
     </form>
+
+    <!-- Login Link -->
+    <p class="text-center text-sm text-gray-600 mt-4">
+      Already have an account?
+      <a
+        href="/login"
+        class="text-blue-600 font-medium hover:underline"
+      >
+        Login Now
+      </a>
+    </p>
+
   </div>
 </body>
 </html>
