--- a/Auth/views/login.ejs
+++ b/Auth/views/login.ejs
@@ -55,6 +55,18 @@
       </button>
 
     </form>
+
+    <!-- Create Account Link -->
+    <p class="text-center text-sm text-gray-600 mt-4">
+      Don’t have an account?
+      <a
+        href="/"
+        class="text-blue-600 font-medium hover:underline"
+      >
+        Create One!
+      </a>
+    </p>
+
   </div>
 </body>
 </html>
