--- a/DataAccosication/views/userpost.ejs
+++ b/DataAccosication/views/userpost.ejs
@@ -21,10 +21,12 @@
             <button class="w-full py-3 rounded-xl bg-black text-white font-semibold tracking-wide hover:bg-white hover:text-black transition-all duration-300 shadow-lg">
                 View Posts
             </button>
-
-            <button class="w-full py-3 rounded-xl bg-red-600 text-white font-semibold tracking-wide hover:bg-white hover:text-red-600 transition-all duration-300 shadow-lg">
-                Logout
-            </button>
+            <form action="/logout" method="post">
+                <button type="submit"
+                    class="w-full py-3 rounded-xl bg-red-600 text-white font-semibold tracking-wide hover:bg-white hover:text-red-600 transition-all duration-300 shadow-lg">
+                    Logout
+                </button>
+            </form>
         </div>
     </div>
 
